# catchybit

./: .env  Cargo.toml  README.md
logs/error-kind/: README.md
logs/openai-logs/: README.md
src/: bot.rs
