[package]
name = "catchybit"
version = "0.1.1"
edition = "2021"
authors = ["wildonion <abarmardeatashyne@gmail.com>"]
description = "catchybit Bot"
homepage = "https://github.com/wildonion/catchybit"
keywords = ["game","web","app", "rust", "crypto"]
license = "UNLICENSED"
repository = "https://github.com/wildonion/catchybit"


[dependencies]
async-std = "1.12.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = {version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serenity = "0.11"
pretty_env_logger = "0.4"
dotenv = "0.15"
redis = { version = "0.23.0", features = ["tokio-comp", "cluster-async", "json"] }
futures = "0.3"
futures-util = "0.3"
log = "0.4"
openai = "1.0.0-alpha.13"
async-trait = "0.1.64"
once_cell = "1"
sysinfo = "0.29.4"
uuid = { version = "1", features = ["serde", "v4"] }


[[bin]]
name = "catchybit"
path = "src/bot.rs"